# idf_esp32_lcd_and_i2c

./: .gitignore  CMakeLists.txt  LICENSE  espidf_source.bat  readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  LVGL.Simulator.cpp  conn.c  conn.h  cw2015.c  cw2015.h  humid_icon.c  idf_component.yml  number_40px.c  number_48px.c  panel1.c  panel1.h  sleep.c  sleep.h  sto.c  sto.h  tcp_client.c  tcp_client.h  test1.c  weather_icon.c
main/emoji/: g110.c  g36.c  g600.c  g616.c  g626.c
main/font_big/: number_16px.c  number_24px.c  weather_chinese.c  weather_chinese_24px.c
main/font_create/: get_unicode_from_ttf.py  百度地图天气取值对照表(0410).xlsx
main/weather_big/: humid_icon.c  wi_clear_day.c  wi_cloudy.c  wi_drizzle.c  wi_dust.c  wi_fog.c  wi_hail.c  wi_haze.c  wi_hurricane.c  wi_mist.c  wi_overcast.c  wi_partly_cloudy_day_rain.c  wi_rain.c  wi_sleet.c  wi_snow.c  wi_thunderstorms.c  wi_thunderstorms_rain.c  wi_wind.c  wi_windsock.c
pcb/: ProDoc_Board3_2024-07-15.epro
