idf_component_register(SRCS
        "font_big/number_24px.c"
        "font_big/number_40px.c"
        "font_big/number_48px.c"
        "font_big/weather_chinese.c"
        "font_big/weather_chinese_24px.c"
        "emoji/g36.c"
        "emoji/g110.c"
        "emoji/g600.c"
        "emoji/g616.c"
        "emoji/g626.c"
        "weather_big/humid_icon.c"
        "weather_big/wi_clear_day.c"
        "weather_big/wi_cloudy.c"
        "weather_big/wi_drizzle.c"
        "weather_big/wi_dust.c"
        "weather_big/wi_fog.c"
        "weather_big/wi_hail.c"
        "weather_big/wi_haze.c"
        "weather_big/wi_mist.c"
        "weather_big/wi_overcast.c"
        "weather_big/wi_rain.c"
        "weather_big/wi_sleet.c"
        "weather_big/wi_snow.c"
        "weather_big/wi_thunderstorms.c"
        "weather_big/wi_thunderstorms_rain.c"
        "weather_big/wi_wind.c"
        "weather_big/wi_hurricane.c"
        "weather_big/wi_windsock.c"
        "weather_big/wi_partly_cloudy_day_rain.c"
        "tcp_client.c"
        "conn.c"
        "panel1.c"
        "sto.c"
        "cw2015.c"
        "test1.c"
        INCLUDE_DIRS "")
